Fixed Bug overlapping with text bug
Fixed the bug by increasing the margin on the top from 50% to 86.5%

--- a/css/title.css
+++ b/css/title.css
@@ -53,7 +53,7 @@ button{
 .center{
 margin: 0;
   position: absolute;
-  top: 50%;
+  top: 86.5%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
